# commander

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml
.cursor/rules/: global.mdc
.github/workflows/: release.yml
src/: main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: commander.icns
src-tauri/resources/: default.metallib
src-tauri/src/: audio.rs  commands.rs  config.rs  http_server.rs  lib.rs  main.rs  platform.rs  transcription.rs  tray.rs  whisper_service.rs
tests/: tray.spec.ts
